# LinkedIn-Profile-Optimization-Agent-

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  OUTPUT_IMPROVEMENT_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  QUICKSTART.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-basic.txt  requirements.txt  test_data_extraction.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.streamlit/: config.toml
src/: __init__.py  config.py  content_scorer.py  content_validator.py  dynamic_checklist.py  image_utils.py  mlops.py  one_click_implementation.py  pdf_analyzer.py  profile_gap_analyzer.py  prompt_formatter.py  prompt_templates.py  strategy_engine.py  telemetry.py  training_logger.py  vision_engine.py
